--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,11 +24,21 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_DEPLOY_KEY }}
-  
-    - name: Build the Docker image
+        
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2
+      
+    - name: Build
+      id: build
       env:
         DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
       run: |
-        docker build . --tag "${DOCKER_USER}/node-red-hass:$(date -I)"
-        docker tag "${DOCKER_USER}/node-red-hass:$(date -I)" "${DOCKER_USER}/node-red-hass:latest"
-        docker push -a "${DOCKER_USER}/node-red-hass"
+        docker buildx build \
+          --tag "${DOCKER_USER}/watchtower:latest" \
+          --platform=linux/amd64,linux/arm64,linux/arm/v7 \
+          --push \
+          -f Dockerfile .
