--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,6 +39,6 @@ jobs:
       run: |
         docker buildx build \
           --tag "${DOCKER_USER}/cloudflared:latest" \
-          --platform=linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x,linux/ppc64le \
+          --platform=linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6 \
           --push \
           -f Dockerfile .
