--- a/.github/workflows/keep-actions-alive.yml
+++ b/.github/workflows/keep-actions-alive.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PUSH_TOKEN }}
         run: |
-          BRANCH_NAME="stay_alive_action"
+          BRANCH_NAME="keep_alive_action"
           REPO_URL=https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git clone -b "${BRANCH_NAME}" "${REPO_URL}" "${BRANCH_NAME}"
           cd ${BRANCH_NAME}
